<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_hautparleur" android:orderInCategory="90" android:title="@string/menu_hautParleur" android:showAsAction="always" android:icon="@drawable/device_access_volume_on"></item>
    <item android:id="@+id/menu_refresh_message" android:orderInCategory="120" android:title="@string/menu_refreshMessage" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_refresh"></item>
   
    <item  android:id="@+id/menu_settings"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item android:id="@+id/menu_emptydb" android:orderInCategory="110" android:title="@string/menu_emptyDb" android:showAsAction="never"></item>
     <item  android:id="@+id/menu_tuto"
        android:orderInCategory="170"
        android:showAsAction="never"
        android:title="@string/menu_tuto"/>
    

</menu>